FEATURE #66427 - Avoid using array.includs() to make PhantomJS happy

--- a/app/assets/javascripts/master/formatters.js.erb
+++ b/app/assets/javascripts/master/formatters.js.erb
@@ -34,7 +34,9 @@
 
       // Set default text-align
       var textAlign, default_style;
-      if (['datetime', 'date', 'time'].includes(columnDef.type) ) {
+      if (columnDef.type == 'datetime' ||
+          columnDef.type == 'date' ||
+          columnDef.type == 'time') {
         textAlign = 'center';
       }
       default_style = textAlign ? 'text-align:' + textAlign : null
