--- a/app/assets/javascripts/master/formatters.js.erb
+++ b/app/assets/javascripts/master/formatters.js.erb
@@ -10,8 +10,26 @@
       return value === null ? "" : "<span style='" + style + ";display:block'>" + value + "</span>";
     },
 
+    parseDateTime: function(dateTimeStr) {
+      try {
+        var REGEX_DATE = '(\\d{2})\\/(\\d{2})\\/(\\d{4})';    // 'yyyy-mm-dd'
+        var REGEX_TIME = '(\\d{2}):(\\d{2})';                 // 'hh:mm'
+        var matchedArr = dateTimeStr.match(new RegExp('^' + REGEX_DATE + '[ \\t]' + REGEX_TIME + '$'));
+
+        return {
+          day: matchedArr[1],
+          month: matchedArr[2],
+          year: matchedArr[3],
+          hour: matchedArr[4],
+          minute: matchedArr[5]
+        };
+      } catch (err) {
+        return null;
+      }
+    },
+
     ///////////////////////////////////////////////////////////////////////////
-    // Tested Formatter
+    // Formatters
     ///////////////////////////////////////////////////////////////////////////
 
     BaseFormatter: function(row, cell, value, columnDef, dataContext) {
@@ -68,77 +86,6 @@
 
     TooltipFormatter: function(row, cell, value, columnDef, dataContext) {
       return "<div title='" + columnDef.tooltips[value] + "'>" + applyStyle(value, columnDef.style || 'text-align:center') + "</div>";
-    },
-
-    // Display only date info as 'yyyy-mm-dd' format for a datetime column
-    OnlyDateFormatter: function(row, cell, value, columnDef, dataContext) {
-      if (value === null || value === "") {
-        return "";
-      } else if ($.isPlainObject(value)) {
-        value = value[columnDef.source];
-      }
-
-      if (/^\d{4}(\-|\/|\.)\d{1,2}\1\d{1,2}(\s\d{1,2}:\d{1,2})?$/.test(value)) {
-        var thedate = $.datepicker.parseDate("yy-mm-dd", value);
-        value = thedate.format("yyyy-mm-dd");
-      }
-
-      return applyStyle(value, columnDef.style || 'text-align:center');
-    },
-
-    ///////////////////////////////////////////////////////////////////////////
-    // Existing (Should remove after improvement of DateTimeEditor)
-    ///////////////////////////////////////////////////////////////////////////
-
-    // Simple data formatter,display a date as "dd mmm" format, like "21 dec"
-    SimpleDateFormatter: function(row, cell, value, columnDef, dataContext) {
-      if (value === null || value === "") {
-        return "";
-      } else if ($.isPlainObject(value)) {
-        value = value[columnDef.source];
-      }
-
-      if (/^\d{4}(\-|\/|\.)\d{1,2}\1\d{1,2}(\s\d{1,2}:\d{1,2})?$/.test(value)) {
-        var thedate = $.datepicker.parseDate("yy-mm-dd", value);
-        return thedate.format("dd mmm");
-      } else {
-        return value;
-      }
-    },
-
-    SimpleTimeFormatter: function(row, cell, value, columnDef, dataContext) {
-      var timeArr;
-      if (value === null || value === "") {
-        return "";
-      } else if ($.isPlainObject(value)) {
-        value = value[columnDef.source];
-      }
-
-      if (/^(\d{4}(\-|\/|\.)\d{1,2}(\-|\/|\.)\d{1,2}\s)?\d{1,2}:\d{1,2}$/.test(value)) {
-        timeArr = value.split(/\s/);
-        return timeArr[timeArr.length - 1];
-      } else {
-        return value;
-      }
-    },
-
-    // Helpers for simple time/date to support for date format as "12 May/12May", and time format as "12:12/1212"
-    ParseSimpleTime: function(simpleTimeStr) {
-      try {
-        var matchedArr = simpleTimeStr.match(/^(\d{2}):?(\d{2})$/);
-        return $.datepicker.parseTime("hh:mm", matchedArr[1] + ":" + matchedArr[2]);
-      } catch (err) {
-        return null;
-      }
-    },
-
-    ParseSimpleDate: function(simpleDateStr) {
-      try {
-        var matchedArr = simpleDateStr.match(/^(\d{2})\s?([A-Za-z]{3})$/);
-        return $.datepicker.parseDate("dd M", matchedArr[1] + " " + matchedArr[2]);
-      } catch (err) {
-        return null;
-      }
     }
   };
 
