REFACTOR #66484 - Redefine Date/Time Editors in form with global variable

--- a/app/views/_form.html.haml
+++ b/app/views/_form.html.haml
@@ -119,68 +119,6 @@
   $('##{grid.name}_form select[data-required="true"]').chosen();
   $('##{grid.name}_form select[data-required="false"]').chosen({allow_single_deselect: true});
 
-  var dateNow = new Date();
-  var yearNow = dateNow.getFullYear();
-
-  var initInputmaskConfigForm = {
-    yearrange: { minyear: 1900, maxyear: 2100 },
-  };
-
-  var initFlatpickrConfigForm = {
-    allowInput: true,
-    clickOpens: true,
-    maxDate: '31/12/2100',
-    minDate: '01/01/1900',
-    onOpen: function(selectedDates, dateStr, instance) {
-      instance.update(dateStr);
-    },
-  };
-
-  // Datetime Picker
-
-  var inputmaskConfigDateTime = $.extend({}, initInputmaskConfigForm, {
-    alias: 'datetime',
-    placeholder: 'dd/mm/' + yearNow + ' 12:00',
-  });
-
-  var flatpickrConfigDateTime = $.extend({}, initFlatpickrConfigForm, {
-    enableTime: true,
-    dateFormat: 'd/m/Y H:i',
-  });
-
-  Inputmask.extendAliases({ 'formDateTime': inputmaskConfigDateTime });
-  $('input[data-datetime]').inputmask('formDateTime').flatpickr(flatpickrConfigDateTime);
-
-  // Date Picker
-
-  var inputmaskConfigDate = $.extend({}, initInputmaskConfigForm, {
-    alias: 'date',
-    placeholder: 'dd/mm/' + yearNow,
-  });
-
-  var flatpickrConfigDate = $.extend({}, initFlatpickrConfigForm, {
-    dateFormat: 'd/m/Y',
-  });
-
-  Inputmask.extendAliases({ 'formDate': inputmaskConfigDate });
-  $('input[data-date]').inputmask('formDate').flatpickr(flatpickrConfigDate);
-
-  // Time Picker
-
-  var inputmaskConfigTime = $.extend({}, initInputmaskConfigForm, {
-    alias: 'hh:mm',
-    placeholder: '12:00',
-  });
-
-  var flatpickrConfigTime = $.extend({}, initFlatpickrConfigForm, {
-    noCalendar: true,
-    enableTime: true,
-    dateFormat: 'H:i',
-    onOpen: function(selectedDates, dateStr, instance) {
-      var time = dateStr || '12:00';
-      instance.update(time);
-    },
-  });
-
-  Inputmask.extendAliases({ 'formTime': inputmaskConfigTime });
-  $('input[data-time]').inputmask('formTime').flatpickr(flatpickrConfigTime);
+  $('input[data-datetime]').inputmask('wulinDateTime').flatpickr(window.fpConfigFormDateTime);
+  $('input[data-date]').inputmask('wulinDate').flatpickr(window.fpConfigFormDate);
+  $('input[data-time]').inputmask('wulinTime').flatpickr(window.fpConfigTime);
