BUG - Fix loading issue for materialize fonts

--- a/app/assets/stylesheets/materialize.css
+++ b/app/assets/stylesheets/materialize.css
@@ -3220,26 +3220,38 @@ nav {
 
   .navbar-fixed {
     height: 64px; } }
+
 @font-face {
   font-family: "Roboto";
-  src: local(Roboto Thin), url("../fonts/roboto/Roboto-Thin.woff2") format("woff2"), url("../fonts/roboto/Roboto-Thin.woff") format("woff");
+  src: local(Roboto Thin),
+       url("../assets/roboto/Roboto-Thin.woff2") format("woff2"),
+       url("../assets/roboto/Roboto-Thin.woff") format("woff");
   font-weight: 100; }
 @font-face {
   font-family: "Roboto";
-  src: local(Roboto Light), url("../fonts/roboto/Roboto-Light.woff2") format("woff2"), url("../fonts/roboto/Roboto-Light.woff") format("woff");
+  src: local(Roboto Light),
+       url("../assets/roboto/Roboto-Light.woff2") format("woff2"),
+       url("../assets/roboto/Roboto-Light.woff") format("woff");
   font-weight: 300; }
 @font-face {
   font-family: "Roboto";
-  src: local(Roboto Regular), url("../fonts/roboto/Roboto-Regular.woff2") format("woff2"), url("../fonts/roboto/Roboto-Regular.woff") format("woff");
+  src: local(Roboto Regular),
+       url("../assets/roboto/Roboto-Regular.woff2") format("woff2"),
+       url("../assets/roboto/Roboto-Regular.woff") format("woff");
   font-weight: 400; }
 @font-face {
   font-family: "Roboto";
-  src: local(Roboto Medium), url("../fonts/roboto/Roboto-Medium.woff2") format("woff2"), url("../fonts/roboto/Roboto-Medium.woff") format("woff");
+  src: local(Roboto Medium),
+       url("../assets/roboto/Roboto-Medium.woff2") format("woff2"),
+       url("../assets/roboto/Roboto-Medium.woff") format("woff");
   font-weight: 500; }
 @font-face {
   font-family: "Roboto";
-  src: local(Roboto Bold), url("../fonts/roboto/Roboto-Bold.woff2") format("woff2"), url("../fonts/roboto/Roboto-Bold.woff") format("woff");
+  src: local(Roboto Bold),
+       url("../assets/roboto/Roboto-Bold.woff2") format("woff2"),
+       url("../assets/roboto/Roboto-Bold.woff") format("woff");
   font-weight: 700; }
+
 a {
   text-decoration: none; }
 
@@ -6612,5 +6624,3 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
 @media (min-height: 40.125em) {
   .picker--time .picker__box {
     margin-bottom: 5em; } }
-
-/*# sourceMappingURL=materialize.css.map */
