FEATURE #65913 - Add material icons support offlibe

--- a/app/assets/stylesheets/materialize.css
+++ b/app/assets/stylesheets/materialize.css
@@ -3252,6 +3252,38 @@ nav {
        url("../assets/roboto/Roboto-Bold.woff") format("woff");
   font-weight: 700; }
 
+@font-face {
+  font-family: "Material Icons";
+  src: local(MaterialIcons Regular),
+       url("/assets/material_icons/MaterialIcons-Regular.woff2") format("woff2"),
+       url("/assets/material_icons/MaterialIcons-Regular.woff") format("woff");
+  font-weight: 400; }
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
+}
+
 a {
   text-decoration: none; }
 
