FEATURE #66965 - Add MD header & make menu toggle feature works

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -4,6 +4,8 @@ $margin: 10px;
 $app_title_color: #9a9a9c;
 $background_color: #d3dadf;
 
+$header_height: 65px;
+
 // Old color
 // !menu_background_color = #e0ecfa
 $menu_background_color: #dee3ea;
