--- a/app/views/_menu.html.haml
+++ b/app/views/_menu.html.haml
@@ -8,58 +8,58 @@
         %a{:href => "#"} ben@ekohe.com
 
 #navigation
-  #menu{style: "top: #{WulinMaster.config.app_title_height}"}
+  #menu{style: "top: 10px"}
     %ul
       - controller.menu.each do |menu_entry|
         - if menu_entry.is_submenu?
           %li.submenu
             %a{:href => "#"}
-              -# %span.indicator
               = menu_entry.title
             %ul
-              -# - menu_entry.each do |submenu_entry|
-              -#   %li{:style => submenu_entry.is_hidden? ? "display:none" : ""}
-              -#     = link_to submenu_entry.path, data: {'active-url': submenu_entry.active_paths} do
-              -#       %i.material-icons= submenu_entry.options[:material_icon]
-              -#       = submenu_entry.title
               - menu_entry.each do |submenu_entry|
-                %li.item{:style => submenu_entry.is_hidden? ? "display:none" : ""}= link_to submenu_entry.title, submenu_entry.path, data: {'active-url' => submenu_entry.active_paths}
+                %li.item{:style => submenu_entry.is_hidden? ? "display:none" : ""}
+                  = link_to submenu_entry.path, data: {'active-url': submenu_entry.active_paths} do
+                    %i.material-icons= submenu_entry.options[:material_icon]
+                    %span= submenu_entry.title
         - else
           %li.item= link_to menu_entry.title, menu_entry.path, data: {'active-url' => menu_entry.active_paths}
-
-  -# - if defined?(WulinOAuth) and User.current_user
-  -#   #user_nav
-  -#     #user_email
-  -#       = User.current_user.email
-  -#       = link_to image_tag('logout.jpg'), "#{WulinOAuth.configuration['logout_uri']}?redirect_uri=#{logout_url}", title: 'Logout', class: 'btn logout-btn'
-  -#
-  -# - elsif defined?(WulinAuth) and current_user
-  -#   #user_nav
-  -#     #user_email
-  -#       = current_user.email
-  -#       = link_to image_tag('logout.jpg'), logout_path, title: 'Logout', class: 'btn logout-btn'
 
   #activity
     #indicators
 
--# %ul#navigation.side-nav.fixed{style: "top: #{WulinMaster.config.app_title_height}"}
--#   - controller.menu.each do |menu_entry|
--#     - if menu_entry.is_submenu?
--#       %li
--#         %a.subheader{:href => "#"}
--#           = menu_entry.title.upcase
--#         %ul
--#           - menu_entry.each do |submenu_entry|
--#             %li{:style => submenu_entry.is_hidden? ? "display:none" : ""}
--#               = link_to submenu_entry.path, data: {'active-url': submenu_entry.active_paths} do
--#                 %i.material-icons= submenu_entry.options[:material_icon]
--#                 = submenu_entry.title
--#     - else
--#       %li= link_to menu_entry.title, menu_entry.path, data: {'active-url': menu_entry.active_paths}
--# %a.button-collapse{"data-activates": "navigation", href: "#"}
--#   %i.material-icons menu
+-# #navigation
+-#   #nav_toggle.open.transparent
+-#   #app_title.ui-helper-clearfix
+-#     - begin
+-#       = render file: File.join(Rails.root, 'app', 'views', 'wulin_master', '_app_title')
+-#     - rescue ActionView::MissingTemplate
+-#       = render '/app_title'
+-#   #menu{style: "top: #{WulinMaster.config.app_title_height}"}
+-#     %ul
+-#       - controller.menu.each do |menu_entry|
+-#         - if menu_entry.is_submenu?
+-#           %li.submenu
+-#             %a{:href => "#"}
+-#               %span.indicator
+-#               = menu_entry.title
+-#             %ul
+-#               - menu_entry.each do |submenu_entry|
+-#                 %li.item{:style => submenu_entry.is_hidden? ? "display:none" : ""}= link_to submenu_entry.title, submenu_entry.path, data: {'active-url' => submenu_entry.active_paths}
+-#         - else
+-#           %li.item= link_to menu_entry.title, menu_entry.path, data: {'active-url' => menu_entry.active_paths}
 -#
--# :javascript
--#   $(document).ready(function() {
--#     $(".button-collapse").sideNav();
--#   });
+-#   - if defined?(WulinOAuth) and User.current_user
+-#     #user_nav
+-#       #user_email
+-#         = User.current_user.email
+-#         = link_to image_tag('logout.jpg'), "#{WulinOAuth.configuration['logout_uri']}?redirect_uri=#{logout_url}", title: 'Logout', class: 'btn logout-btn'
+-#
+-#   - elsif defined?(WulinAuth) and current_user
+-#     #user_nav
+-#       #user_email
+-#         = current_user.email
+-#         = link_to image_tag('logout.jpg'), logout_path, title: 'Logout', class: 'btn logout-btn'
+-#
+-#
+-#   #activity
+-#     #indicators
