--- a/app/assets/stylesheets/materialize.css
+++ b/app/assets/stylesheets/materialize.css
@@ -3224,33 +3224,40 @@ nav {
 @font-face {
   font-family: "Roboto";
   src: local(Roboto Thin),
-       url("../fonts/roboto/Roboto-Thin.woff2") format("woff2"),
-       url("../fonts/roboto/Roboto-Thin.woff") format("woff");
+       url("../assets/roboto/Roboto-Thin.woff2") format("woff2"),
+       url("../assets/roboto/Roboto-Thin.woff") format("woff");
   font-weight: 100; }
 @font-face {
   font-family: "Roboto";
   src: local(Roboto Light),
-       url("../fonts/roboto/Roboto-Light.woff2") format("woff2"),
-       url("../fonts/roboto/Roboto-Light.woff") format("woff");
+       url("../assets/roboto/Roboto-Light.woff2") format("woff2"),
+       url("../assets/roboto/Roboto-Light.woff") format("woff");
   font-weight: 300; }
 @font-face {
   font-family: "Roboto";
   src: local(Roboto Regular),
-       url("../fonts/roboto/Roboto-Regular.woff2") format("woff2"),
-       url("../fonts/roboto/Roboto-Regular.woff") format("woff");
+       url("../assets/roboto/Roboto-Regular.woff2") format("woff2"),
+       url("../assets/roboto/Roboto-Regular.woff") format("woff");
   font-weight: 400; }
 @font-face {
   font-family: "Roboto";
   src: local(Roboto Medium),
-       url("../fonts/roboto/Roboto-Medium.woff2") format("woff2"),
-       url("../fonts/roboto/Roboto-Medium.woff") format("woff");
+       url("../assets/roboto/Roboto-Medium.woff2") format("woff2"),
+       url("../assets/roboto/Roboto-Medium.woff") format("woff");
   font-weight: 500; }
 @font-face {
   font-family: "Roboto";
   src: local(Roboto Bold),
-       url("../fonts/roboto/Roboto-Bold.woff2") format("woff2"),
-       url("../fonts/roboto/Roboto-Bold.woff") format("woff");
+       url("../assets/roboto/Roboto-Bold.woff2") format("woff2"),
+       url("../assets/roboto/Roboto-Bold.woff") format("woff");
   font-weight: 700; }
+
+@font-face {
+  font-family: "Material Icons";
+  src: local(MaterialIcons Regular),
+       url("/assets/material_icons/MaterialIcons-Regular.woff2") format("woff2"),
+       url("/assets/material_icons/MaterialIcons-Regular.woff") format("woff");
+  font-weight: 400; }
 
 .material-icons {
   font-family: 'Material Icons';
