FEATURE #66965 - MD inplemetation: Adjust layout & Get app_title dynamiccaly

--- a/app/assets/stylesheets/materialize_custome.scss
+++ b/app/assets/stylesheets/materialize_custome.scss
@@ -4,4 +4,12 @@
 
 nav {
   background-color: dodgerblue;
+
+  .brand-logo {
+    font-size: 1.5rem;
+
+    i.material-icons {
+      margin-left: 15px;
+    }
+  }
 }
