--- a/app/views/_menu.html.haml
+++ b/app/views/_menu.html.haml
@@ -2,7 +2,7 @@
   .nav-wrapper
     %a#menu-toggle.brand-logo{:href => "#"}
       %i.material-icons menu
-      MIMA
+      = WulinMaster.config.app_title
     %ul#nav-mobile.right.hide-on-med-and-down
       %li
         %a{:href => "#"} ben@ekohe.com
