FEATURE #66965 - MD inplemetation: Change to redirect to root_path when click the app title

--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -6,6 +6,10 @@ $menu_width: 199px;
   left: 0px !important;
 }
 
+#menu-toggle {
+  padding-left: 20px;
+}
+
 #navigation {
   position: absolute;
   top: $header_height;
