--- a/app/views/_menu.html.haml
+++ b/app/views/_menu.html.haml
@@ -6,12 +6,14 @@
       = WulinMaster.config.app_title
     %ul.right
       %li
+        - binding.pry
         - if defined?(WulinOAuth) && User.current_user
           %a{:href => "#{WulinOAuth.configuration['logout_uri']}?redirect_uri=#{logout_url}"}
             %i.material-icons account_circle
             %span= User.current_user.email
         - elsif defined?(WulinAuth) && current_user
-          %a{:href => logout_path}
+          -# %a{:href => logout_path}
+          = link_to logout_path do
             %i.material-icons account_circle
             %span= current_user.email
 
