FEATURE #66965 - MD inplemetation: Add help & notifictions icon in header and some layout changes

--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -50,7 +50,7 @@ h1 {
   bottom: 0;
   right: 0;
   text-align: center;
-  background: $background_color image-url("ui/content_background.png") repeat-x top left;
+  // background: $background_color image-url("ui/content_background.png") repeat-x top left;
 }
 
 #screen_content {
