--- a/app/assets/stylesheets/materialize_custome.scss
+++ b/app/assets/stylesheets/materialize_custome.scss
@@ -1,7 +1,3 @@
-.material-icons {
-  font-size: 20px;
-}
-
 nav {
   background-color: dodgerblue;
 
@@ -13,5 +9,24 @@ nav {
   a i {
     float: left;
     margin-right: 10px;
+  }
+
+  i.material-icons {
+    font-size: 20px;
+  }
+}
+
+@media only screen and (min-width: 601px) {
+  nav.nav-extended .nav-wrapper {
+    min-height: 50px;
+  }
+
+  nav, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
+    height: 47px;
+    line-height: 50px;
+  }
+
+  .navbar-fixed {
+    height: 50px; 
   }
 }
