FEATURE #66965 - MD inplemetation: Render header in index

--- a/app/views/index.html.haml
+++ b/app/views/index.html.haml
@@ -4,5 +4,6 @@
     = render :partial => '/panel', :locals => {:panel => component} if component.is_panel?
     - break if component.respond_to?(:fill_window?) and component.fill_window?
 - else
+  = render '/header'
   = render '/menu'
   = render '/content'
