FEATURE #67027 - MD inplemetation: Layout Adjustment

--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -25,7 +25,7 @@ h1 {
   .grid-header {
     position: relative;
     height: 59px;
-    background: image-url("ui/top_bar_bg.png");
+    // background: image-url("ui/top_bar_bg.png");
     h2 {
       padding-top: $margin;
       padding-left: $margin;
