--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -20,7 +20,9 @@ $menu_width: 199px;
   //:padding-left               8px
   font-size: 1.2em;
   // border-right: 1px solid #a5a5a5;
+  border-right: 1px solid #cdc9c9;  
   line-height: 1.7em;
+  z-index: -1;
   h1 {
     font-size: 1.3em;
     text-transform: uppercase;
