--- a/app/views/_menu.html.haml
+++ b/app/views/_menu.html.haml
@@ -10,7 +10,7 @@
               - menu_entry.each do |submenu_entry|
                 %li.item{:style => submenu_entry.is_hidden? ? "display:none" : ""}
                   = link_to submenu_entry.path, data: {'active-url': submenu_entry.active_paths} do
-                    %i.material-icons= submenu_entry.options[:material_icon] || 'view_list'
+                    %i.material-icons= submenu_entry.options[:material_icon] || 'crop_16_9'
                     %span= submenu_entry.title
         - else
           %li.item= link_to menu_entry.title, menu_entry.path, data: {'active-url' => menu_entry.active_paths}
